<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="welcome_to_alc_4_0">Welcome to ALC 4.0</string>
    <string name="about_alc">ABOUT ALC</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="todo">TODO</string>
    <string name="ayobami_adeleke">Ayobami Adeleke</string>
    <string name="track">Track:</string>
    <string name="android">Android</string>
    <string name="country">Country:</string>
    <string name="email">Email:</string>
    <string name="slack_username">Slack Username:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="nigeria">Nigeria</string>
    <string name="ayobam_adeleke_gmail_com">ayobam.adeleke@gmail.com</string>
    <string name="_08161709982">08161709982</string>
    <string name="ayjagun">Ayjagun</string>

</resources>
